feat: support swagger.json to serve

--- a/packages/schematics/package.json
+++ b/packages/schematics/package.json
@@ -2,7 +2,7 @@
   "name": "co-cli",
   "version": "0.0.0-PLACEHOLDER",
   "description": "Schematics specific to co-cli",
-  "author": "cipchk<cipchk@qq.com>",
+  "author": "CITYOCEAN",
   "license": "MIT",
   "repository": {
     "type": "git",
