--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "co-libs",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "co-libs 是一组用于前端开发的公共模块集合",
   "keywords": [
     "co-libs",
@@ -19,54 +19,55 @@
   },
   "homepage": "https://wwww.cityocean.com",
   "scripts": {
+    "0": "bash scripts/ci/build.sh -n apm",
     "lint": "bash scripts/ci/lint.sh -ts -less",
     "tslint": "tslint-config-prettier-check ./tslint.json",
-    
-    "build": "bash scripts/ci/build.sh -n apm",
     "build:libs": "bash scripts/ci/build-libs.sh",
     "build:libs:chart": "bash scripts/ci/build-libs.sh -n chart",
     "build:schematics": "bash scripts/ci/build-schematics.sh -b -copy",
     "build:site": "npm run site:gen && node scripts/ci/build-no-lvy && node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng build --prod",
     "build:artifacts": "bash scripts/ci/build-artifacts.sh",
-   
     "site": "npm run site:gen && ng s -o --hmr",
     "site:gen": "node scripts/site/main init && node scripts/site/scripts/color.js && node scripts/site/scripts/theme.js",
-   
     "test": "ng test --no-progress --browsers=ChromeHeadlessCI --code-coverage --no-watch",
     "test:cli": "bash scripts/ci/build-schematics.sh -t -clone",
     "test:integration": "bash scripts/ci/build-schematics.sh -b -t -clone -integration",
-    
     "publish:npm": "bash scripts/publish/publish.sh",
     "publish:prev": "node scripts/publish/publish.js && node scripts/publish/publish-scaffold.js && bash ../ng-alain/scripts/_ci/fix-mock.sh",
     "publish:next": "bash scripts/publish/publish.sh -next",
-
     "analyze": "node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng build --prod --stats-json",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s --pkg package.json",
-   
     "sync-scaffold-version": "node scripts/publish/sync-scaffold-version.js"
   },
   "dependencies": {
-    "@angular/animations": "~9.1.9",
-    "@angular/common": "~9.1.9",
-    "@angular/compiler": "~9.1.9",
-    "@angular/core": "~9.1.9",
-    "@angular/forms": "~9.1.9",
-    "@angular/platform-browser": "~9.1.9",
-    "@angular/platform-browser-dynamic": "~9.1.9",
-    "@angular/router": "~9.1.9",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "@angular/elements": "~9.1.9",
+    "@angular-devkit/core": "^9.1.7",
+    "@angular-devkit/schematics": "^9.1.7",
+    "@angular/animations": "~9.1.11",
+    "@angular/common": "~9.1.11",
+    "@angular/compiler": "~9.1.11",
+    "@angular/core": "~9.1.11",
+    "@angular/elements": "~9.1.11",
+    "@angular/forms": "~9.1.11",
+    "@angular/platform-browser": "~9.1.11",
+    "@angular/platform-browser-dynamic": "~9.1.11",
+    "@angular/router": "~9.1.11",
     "@antv/data-set": "^0.11.4",
     "@antv/g2": "^4.0.8",
+    "@ng-util/monaco-editor": "^9.1.1",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@schematics/angular": "^9.1.7",
     "@stackblitz/sdk": "^1.4.0",
-    "codesandbox": "^2.1.14",
+    "@types/lodash": "^4.14.155",
+    "@webcomponents/custom-elements": "^1.4.1",
     "ajv": "^6.12.2",
+    "aos": "^3.0.0-beta.6",
+    "axios": "^0.19.2",
+    "codesandbox": "^2.1.14",
+    "docsearch.js": "^2.6.3",
     "extend": "^3.0.2",
     "file-saver": "^2.0.2",
+    "lodash": "^4.17.15",
     "marked": "^1.1.0",
     "ng-github-button": "^9.0.0",
     "ng-zorro-antd": "^9.1.2",
@@ -77,15 +78,15 @@
     "ngx-tinymce": "^9.0.0",
     "ngx-ueditor": "^9.0.0",
     "qrious": "^4.0.2",
-    "@webcomponents/custom-elements": "^1.4.1",
-    "aos": "^3.0.0-beta.6",
-    "docsearch.js": "^2.6.3",
-    "@ng-util/monaco-editor": "^9.1.1"
+    "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
+    "typescript": "~3.8.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.6",
     "@angular/cli": "~9.1.6",
-    "@angular/compiler-cli": "~9.1.9",
+    "@angular/compiler-cli": "~9.1.11",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -101,7 +102,7 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.2",
     "typescript": "~3.8.3",
-    "@angular/language-service": "~9.1.9",
+    "@angular/language-service": "~9.1.11",
     "karma-junit-reporter": "^2.0.1",
     "karma-spec-reporter": "0.0.32",
     "karma-viewport": "^1.0.6",
