--- a/package.json
+++ b/package.json
@@ -21,28 +21,22 @@
   "scripts": {
     "lint": "bash scripts/ci/lint.sh -ts -less",
     "tslint": "tslint-config-prettier-check ./tslint.json",
-    
     "build": "bash scripts/ci/build.sh -n apm",
     "build:libs": "bash scripts/ci/build-libs.sh",
     "build:libs:chart": "bash scripts/ci/build-libs.sh -n chart",
     "build:schematics": "bash scripts/ci/build-schematics.sh -b -copy",
     "build:site": "npm run site:gen && node scripts/ci/build-no-lvy && node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng build --prod",
     "build:artifacts": "bash scripts/ci/build-artifacts.sh",
-   
     "site": "npm run site:gen && ng s -o --hmr",
     "site:gen": "node scripts/site/main init && node scripts/site/scripts/color.js && node scripts/site/scripts/theme.js",
-   
     "test": "ng test --no-progress --browsers=ChromeHeadlessCI --code-coverage --no-watch",
     "test:cli": "bash scripts/ci/build-schematics.sh -t -clone",
     "test:integration": "bash scripts/ci/build-schematics.sh -b -t -clone -integration",
-    
     "publish:npm": "bash scripts/publish/publish.sh",
     "publish:prev": "node scripts/publish/publish.js && node scripts/publish/publish-scaffold.js && bash ../ng-alain/scripts/_ci/fix-mock.sh",
-    "publish:next": "bash scripts/publish/publish.sh -next",
-
+    "publish:next": "basripts/publish/publish.sh -next",
     "analyze": "node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng build --prod --stats-json",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s --pkg package.json",
-   
     "sync-scaffold-version": "node scripts/publish/sync-scaffold-version.js"
   },
   "dependencies": {
