--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,15 +7,29 @@
     "module": "esnext",
     "outDir": "../out-tsc/app",
     "baseUrl": ".",
-    "types": ["node"],
+    "types": [
+      "node"
+    ],
     "paths": {
-      "@core/*": ["app/core/*"],
-      "@shared": ["app/shared"],
-      "@shared/*": ["app/shared/*"],
-      "@co/*": ["../packages/*"]
+      "@core/*": [
+        "app/core/*"
+      ],
+      "@shared": [
+        "app/shared"
+      ],
+      "@shared/*": [
+        "app/shared/*"
+      ],
+      "@co/*": [
+        "../packages/*"
+      ]
     }
   },
-  "exclude": ["test.ts", "**/*.spec.ts", "templates/*.ts"],
+  "exclude": [
+    "test.ts",
+    "**/*.spec.ts",
+    "templates/*.ts"
+  ],
   "angularCompilerOptions": {
     "enableIvy": false
   }
