--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "test:cli": "bash scripts/ci/build-schematics.sh -t -clone",
     "test:integration": "bash scripts/ci/build-schematics.sh -b -t -clone -integration",
     "publish:npm": "bash scripts/publish/publish.sh",
+    "publish:schematics": "bash scripts/publish/publish.sh  -schematics",
     "publish:prev": "node scripts/publish/publish.js && node scripts/publish/publish-scaffold.js && bash ../ng-alain/scripts/_ci/fix-mock.sh",
     "publish:next": "bash scripts/publish/publish.sh -next",
     "analyze": "node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng build --prod --stats-json",
@@ -42,6 +43,7 @@
     "sync-scaffold-version": "node scripts/publish/sync-scaffold-version.js"
   },
   "dependencies": {
+    "@angular-devkit/schematics-cli": "^0.901.9",
     "@angular/animations": "~9.1.9",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
@@ -64,6 +66,7 @@
     "docsearch.js": "^2.6.3",
     "extend": "^3.0.2",
     "file-saver": "^2.0.2",
+    "lodash": "^4.17.15",
     "marked": "^1.1.0",
     "ng-github-button": "^9.0.0",
     "ng-zorro-antd": "^9.2.1",
@@ -77,7 +80,6 @@
     "rxjs": "~6.5.4",
     "save-dev": "0.0.1-security",
     "tslib": "^1.10.0",
-    "lodash": "^4.17.15",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -158,5 +160,4 @@
     "webpack-bundle-analyzer": "^3.6.1",
     "xlsx": "^0.16.1"
   }
-  
 }
