--- a/packages/schematics/tsconfig.json
+++ b/packages/schematics/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
-    "lib": ["es2017", "dom"],
+    "lib": [
+      "es2017",
+      "dom"
+    ],
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "../../dist/co-cli",
@@ -10,7 +13,17 @@
     "sourceMap": true,
     "declaration": true,
     "target": "es6",
-    "types": ["jasmine", "node"]
+    "types": [
+      "jasmine",
+      "node"
+    ]
   },
-  "exclude": ["test.ts", "*/files/**/*", "test-setup/**/*", "**/*.spec.ts", "ng-update/test-cases/**/*"]
+  "exclude": [
+    "test.ts",
+    "*/files/**/*",
+    "*/index_files/**/*",
+    "test-setup/**/*",
+    "**/*.spec.ts",
+    "ng-update/test-cases/**/*"
+  ]
 }
