--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "co-libs",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "co-libs 是一组用于前端开发的公共模块集合",
   "keywords": [
     "co-libs",
@@ -26,7 +26,7 @@
     "build:libs:chart": "bash scripts/ci/build-libs.sh -n chart",
     "build:libs:cbc": "bash scripts/ci/build-libs.sh -n cbc",
     "build:libs:cds": "bash scripts/ci/build-libs.sh -n cds",
-    "build:schematics": "bash scripts/ci/build-schematics.sh -b -copy",
+    "build:schematics": "bash scripts/ci/build-schematics.sh -b",
     "build:site": "npm run site:gen && node scripts/ci/build-no-lvy && node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng build --prod",
     "build:artifacts": "bash scripts/ci/build-artifacts.sh",
     "site": "npm run site:gen && node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng s --hmr --port 9999",
