--- a/packages/cbc/basic/xlsx/package.json
+++ b/packages/cbc/basic/xlsx/package.json
@@ -5,7 +5,7 @@
       "entryFile": "public_api.ts",
       "umdModuleIds": {
         "file-saver": "saveAs",
-        "@delon/util": "delon.util"
+        "@co/core": "co.core"
       }
     }
   }
