--- a/packages/cbc/business/customer-picker/package.json
+++ b/packages/cbc/business/customer-picker/package.json
@@ -4,7 +4,8 @@
       "flatModuleFile": "coCustomerPicker",
       "entryFile": "public_api.ts",
       "umdModuleIds": {
-        "@co/core": "co.core"
+        "@co/core": "co.core",
+        "@co/cds": "co.cds"
       }
     }
   }
