--- a/packages/cbc/layout/page-header/package.json
+++ b/packages/cbc/layout/page-header/package.json
@@ -1,7 +1,7 @@
 {
   "ngPackage": {
     "lib": {
-      "flatModuleFile": "pageHeader",
+      "flatModuleFile": "coPageHeader",
       "entryFile": "public_api.ts",
       "umdModuleIds": {
         "@angular/cdk/observers": "ng.cdk.observers",
