--- a/packages/cbc/layout/sidebar-nav/package.json
+++ b/packages/cbc/layout/sidebar-nav/package.json
@@ -1,7 +1,7 @@
 {
   "ngPackage": {
     "lib": {
-      "flatModuleFile": "sidebarNav",
+      "flatModuleFile": "coSidebarNav",
       "entryFile": "public_api.ts",
       "umdModuleIds": {
         "ng-zorro-antd/icon": "ng-zorro-antd/icon",
