--- a/packages/cbc/layout/toolbar/package.json
+++ b/packages/cbc/layout/toolbar/package.json
@@ -1,7 +1,7 @@
 {
   "ngPackage": {
     "lib": {
-      "flatModuleFile": "pageHeader",
+      "flatModuleFile": "coToolbar",
       "entryFile": "public_api.ts",
       "umdModuleIds": {
         "@co/core": "co.core"
