fix publish bug

--- a/packages/common/tsconfig.lib.json
+++ b/packages/common/tsconfig.lib.json
@@ -4,6 +4,7 @@
     "baseUrl": ".",
     "rootDir": ".",
     "paths": {
+      "@co/auth": ["../../dist/@co/auth"],
       "@co/acl": ["../../dist/@co/acl"],
       "@co/core": ["../../dist/@co/core"]
     }
