--- a/packages/schematics/package.json
+++ b/packages/schematics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "co-cli",
-  "version": "0.0.0-PLACEHOLDER",
+  "version": "0.0.31",
   "description": "Schematics specific to co-cli",
   "author": "cipchk<cipchk@qq.com>",
   "license": "MIT",
