--- a/packages/cds/package.json
+++ b/packages/cds/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@co/cds",
-  "version": "0.0.0-PLACEHOLDER",
+  "version": "0.0.39",
   "author": "cityocean<it@cityocean.com>",
   "license": "MIT",
   "repository": {
