--- a/packages/cbc/business/commodity-picker/package.json
+++ b/packages/cbc/business/commodity-picker/package.json
@@ -1,7 +1,7 @@
 {
   "ngPackage": {
     "lib": {
-      "flatModuleFile": "coProductPicker",
+      "flatModuleFile": "coCommodityPicker",
       "entryFile": "public_api.ts",
       "umdModuleIds": {
         "@co/core": "co.core"
