--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "build:libs": "bash scripts/ci/build-libs.sh",
     "build:libs:chart": "bash scripts/ci/build-libs.sh -n chart",
     "build:libs:cbc": "bash scripts/ci/build-libs.sh -n cbc",
+    "build:libs:cms": "bash scripts/ci/build-libs.sh -n cms",
     "build:libs:cds": "bash scripts/ci/build-libs.sh -n cds",
     "build:schematics": "bash scripts/ci/build-schematics.sh -b",
     "build:site": "npm run site:gen && node scripts/ci/build-no-lvy && node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng build --prod",
     "build:artifacts": "bash scripts/ci/build-artifacts.sh",
+    "build:doc": "node scripts/site/main init && node scripts/site/scripts/color.js && node scripts/site/scripts/theme.js",
+    "doc": "npm run site:gen && node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng s --hmr --port 9000",
+
     "site": "npm run site:gen && node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng s --hmr --port 9000",
     "site:gen": "node scripts/site/main init && node scripts/site/scripts/color.js && node scripts/site/scripts/theme.js",
     "test": "ng test --no-progress --browsers=ChromeHeadlessCI --code-coverage --no-watch",
