--- a/packages/schematics/package.json
+++ b/packages/schematics/package.json
@@ -1,8 +1,8 @@
 {
   "name": "co-cli",
-  "version": "0.0.62",
+  "version": "0.0.64",
   "description": "Schematics specific to co-cli",
-  "author": "cipchk<cipchk@qq.com>",
+  "author": "Peln",
   "license": "MIT",
   "repository": {
     "type": "git",
