--- a/angular.json
+++ b/angular.json
@@ -40,6 +40,7 @@
               "extractCss": true,
               "namedChunks": false,
               "aot": true,
+              "index": "src/index-prod.html",
               "deployUrl": "//doc.cityocean.com:8010/frontend/",
               "extractLicenses": true,
               "vendorChunk": false,
