--- a/packages/cbc/web/se/package.json
+++ b/packages/cbc/web/se/package.json
@@ -6,9 +6,7 @@
       "umdModuleIds": {
         "ng-zorro-antd/core/outlet": "ng-zorro-antd/core/outlet",
         "ng-zorro-antd/tooltip": "ng-zorro-antd/tooltip",
-        "ng-zorro-antd/icon": "ng-zorro-antd/icon",
-        "@delon/theme": "delon.theme",
-        "@delon/util": "delon.util"
+        "ng-zorro-antd/icon": "ng-zorro-antd/icon"
       }
     }
   }
