--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -25,6 +25,10 @@
       ]
     }
   },
+  "files": [
+    "main.ts",
+    "polyfills.ts"
+  ],
   "exclude": [
     "test.ts",
     "**/*.spec.ts",
