build(script): package.json

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "build:artifacts": "bash scripts/ci/build-artifacts.sh",
     "build:doc": "node scripts/site/main init && node scripts/site/scripts/color.js && node scripts/site/scripts/theme.js",
     "doc": "npm run site:gen && node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng s --hmr --port 9000",
-    "site": "npm run site:gen && node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng s --hmr --port 9000",
+    "site": "npm run site:gen && npm run site:serve",
+    "site:serve": "node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng s --hmr --port 9000",
     "site:gen": "node scripts/site/main init && node scripts/site/scripts/color.js && node scripts/site/scripts/theme.js",
     "test": "ng test --no-progress --browsers=ChromeHeadlessCI --code-coverage --no-watch",
     "test:cli": "bash scripts/ci/build-schematics.sh -t -clone",
