--- a/packages/cbc/business/organization-cascader/package.json
+++ b/packages/cbc/business/organization-cascader/package.json
@@ -1,7 +1,7 @@
 {
   "ngPackage": {
     "lib": {
-      "flatModuleFile": "coCasccder",
+      "flatModuleFile": "coOrganizationCasccder",
       "entryFile": "public_api.ts",
       "umdModuleIds": {
         "@co/core": "co.core"
