--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@co/auth",
   "version": "0.0.0-PLACEHOLDER",
-  "author": "cipchk<cipchk@qq.com>",
+  "author": "cityocean<it@cityocean.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ng-alain/delon.git"
+    "url": "git+ http://comail:8888/tfs/Cityocean/CO.Platform/_git/co-libs"
   },
   "bugs": {
-    "url": "https://github.com/ng-alain/ng-alain/issues"
+    "url": " http://comail:8888/tfs/Cityocean/CO.Platform/_git/co-libs/issues"
   },
-  "homepage": "https://ng-alain.com",
+  "homepage": "https://www.cityocean.com",
   "keywords": [
     "angular auth",
     "ng auth",
@@ -18,9 +18,6 @@
     "angular jwt",
     "ng jwt",
     "ngx jwt",
-    "delon",
-    "ng-alain",
-    "alain",
     "antd",
     "ng-zorro-antd"
   ],
