--- a/packages/chart/package.json
+++ b/packages/chart/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@co/chart",
   "version": "0.0.0-PLACEHOLDER",
-  "author": "cipchk<cipchk@qq.com>",
+  "author": "cityocean<it@cityocean.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ng-alain/delon.git"
+    "url": "git+ http://comail:8888/tfs/Cityocean/CO.Platform/_git/co-libs"
   },
   "bugs": {
-    "url": "https://github.com/ng-alain/ng-alain/issues"
+    "url": " http://comail:8888/tfs/Cityocean/CO.Platform/_git/co-libs/issues"
   },
-  "homepage": "https://ng-alain.com",
+  "homepage": "https://www.cityocean.com",
   "keywords": [
     "co",
     "chart",
