--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,23 +1,20 @@
 {
   "name": "@co/form",
   "version": "0.0.0-PLACEHOLDER",
-  "author": "cipchk<cipchk@qq.com>",
+  "author": "cityocean<it@cityocean.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ng-alain/delon.git"
+    "url": "git+ http://comail:8888/tfs/Cityocean/CO.Platform/_git/co-libs"
   },
   "bugs": {
-    "url": "https://github.com/ng-alain/ng-alain/issues"
+    "url": " http://comail:8888/tfs/Cityocean/CO.Platform/_git/co-libs/issues"
   },
-  "homepage": "https://ng-alain.com",
+  "homepage": "https://www.cityocean.com",
   "keywords": [
     "schema form",
     "angular schema form",
     "nz-form",
-    "delon",
-    "ng-alain",
-    "alain",
     "form",
     "angular form",
     "ng form",
