1:解决NPM LINK调试问题。2：代码规范整理

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "co-libs",
-  "version": "0.1.64",
+  "version": "0.1.63",
   "description": "co-libs 是一组用于前端开发的公共模块集合",
   "keywords": [
     "co-libs",
@@ -21,12 +21,17 @@
   "scripts": {
     "lint": "bash scripts/ci/lint.sh -ts -less",
     "tslint": "tslint-config-prettier-check ./tslint.json",
-    "build": "bash scripts/ci/build.sh -n apm",
     "build:libs": "bash scripts/ci/build-libs.sh",
+    "build:libs:core": "bash scripts/ci/build-libs.sh -n core",
+    "build:libs:core:debug": "bash scripts/ci/build-libs.sh  -n core -t D:\\src\\co\\new\\co-portal\\ -debug",
     "build:libs:chart": "bash scripts/ci/build-libs.sh -n chart",
     "build:libs:cbc": "bash scripts/ci/build-libs.sh -n cbc",
+    "build:libs:cbc:debug": "bash scripts/ci/build-libs.sh  -n cbc -t D:\\src\\co\\new\\co-portal\\ -debug",
     "build:libs:cms": "bash scripts/ci/build-libs.sh -n cms",
+    "build:libs:cms:debug":"bash scripts/ci/build-libs.sh  -n cms -t D:\\src\\co\\new\\co-portal\\ -debug",
     "build:libs:cds": "bash scripts/ci/build-libs.sh -n cds",
+    "build:libs:theme": "bash scripts/ci/build-libs.sh -n theme",
+    "build:libs:theme:debug": "bash scripts/ci/build-libs.sh  -n theme -t D:\\src\\co\\new\\co-portal\\ -debug",
     "build:schematics": "bash scripts/ci/build-schematics.sh -b",
     "build:site": "npm run site:gen && node scripts/ci/build-no-lvy && node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng build --prod",
     "build:artifacts": "bash scripts/ci/build-artifacts.sh",
@@ -42,8 +47,6 @@
     "publish:schematics": "bash scripts/publish/publish.sh  -schematics",
     "publish:prev": "node scripts/publish/publish.js && node scripts/publish/publish-scaffold.js && bash ../ng-alain/scripts/_ci/fix-mock.sh",
     "publish:next": "bash scripts/publish/publish.sh -next",
-    "link:npm": "bash scripts/publish/link.sh",
-    "unlink:npm": "bash scripts/publish/link.sh -u",
     "gen:platform": "ng g co-cli:swagger --name platform --url http://192.168.1.5:8000/swagger/Platform/swagger.json",
     "gen:pub": "ng g co-cli:swagger --name pub --url http://192.168.1.5:8000/swagger/PUB/swagger.json",
     "analyze": "node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng build --prod --stats-json",
