--- a/packages/cbc/tsconfig.json
+++ b/packages/cbc/tsconfig.json
@@ -5,9 +5,9 @@
     "rootDir": ".",
     "baseUrl": ".",
     "paths": {
-      "@co/*": ["../*"],
-      "@co/cbc": ["./"],
-      "@co/cbc/*": ["./*"]
+      // "@co/*": ["../*"],
+      // "@co/cbc": ["./"],
+      // "@co/cbc/*": ["./*"]
     }
   },
   "files": ["public_api.ts"],
