--- a/packages/cbc/tsconfig.lib.json
+++ b/packages/cbc/tsconfig.lib.json
@@ -7,8 +7,8 @@
       // "@co/core": ["../../dist/@co/core"],
       // "@co/common": ["../../dist/@co/common"],
       // "@co/cds": ["../../dist/@co/cds"],
-      "@co/cbc": ["./"],
-      "@co/cbc/*": ["./*"],
+      // "@co/cbc": ["./"],
+      // "@co/cbc/*": ["./*"],
       "@co/*": ["../../dist/@co/*"]
     }
   },
