多标签页图标如果是详情页则用对应列表的菜单图标。

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "co-libs",
-  "version": "0.1.74",
+  "version": "0.1.90",
   "description": "co-libs 是一组用于前端开发的公共模块集合",
   "keywords": [
     "co-libs",
@@ -22,17 +22,17 @@
     "lint": "bash scripts/ci/lint.sh -ts -less",
     "tslint": "tslint-config-prettier-check ./tslint.json",
     "build:libs": "bash scripts/ci/build-libs.sh",
-    "build:libs:debug": "bash scripts/ci/build-libs.sh -n ALL -t D:\\src\\co\\new\\co-portal\\ -debug",
+    "build:libs:debug": "bash scripts/ci/build-libs.sh -n ALL -t D:\\src\\co\\co-portal-ms\\ -debug",
     "build:libs:core": "bash scripts/ci/build-libs.sh -n core",
-    "build:libs:core:debug": "bash scripts/ci/build-libs.sh  -n core -t D:\\src\\co\\new\\co-portal\\ -debug",
+    "build:libs:core:debug": "bash scripts/ci/build-libs.sh  -n core -t D:\\src\\co\\co-portal-ms\\ -debug",
     "build:libs:chart": "bash scripts/ci/build-libs.sh -n chart",
     "build:libs:cbc": "bash scripts/ci/build-libs.sh -n cbc",
-    "build:libs:cbc:debug": "bash scripts/ci/build-libs.sh  -n cbc -t D:\\src\\co\\new\\co-portal\\ -debug",
+    "build:libs:cbc:debug": "bash scripts/ci/build-libs.sh  -n cbc -t D:\\src\\co\\co-portal-ms\\ -debug",
     "build:libs:cms": "bash scripts/ci/build-libs.sh -n cms",
-    "build:libs:cms:debug":"bash scripts/ci/build-libs.sh  -n cms -t D:\\src\\co\\new\\co-portal\\ -debug",
+    "build:libs:cms:debug":"bash scripts/ci/build-libs.sh  -n cms -t D:\\src\\co\\co-portal-ms\\ -debug",
     "build:libs:cds": "bash scripts/ci/build-libs.sh -n cds",
     "build:libs:theme": "bash scripts/ci/build-libs.sh -n theme",
-    "build:libs:theme:debug": "bash scripts/ci/build-libs.sh  -n theme -t D:\\src\\co\\new\\co-portal\\ -debug",
+    "build:libs:theme:debug": "bash scripts/ci/build-libs.sh  -n theme -t D:\\src\\co\\co-portal-ms\\ -debug",
     "build:schematics": "bash scripts/ci/build-schematics.sh -b",
     "build:site": "npm run site:gen && node scripts/ci/build-no-lvy && node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng build --prod",
     "build:artifacts": "bash scripts/ci/build-artifacts.sh",
