--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "dependencies": {
     "@angular-devkit/schematics-cli": "^0.901.9",
     "@angular/animations": "~9.1.9",
+    "@angular/cdk": "~9.2.1",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
