--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "../tsconfig.json",
+  "experimentalDecorators": true,
   "compilerOptions": {
     "sourceMap": false,
     "resolveJsonModule": true,
