解决IM编译MODULE未定义BUG.

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "co-cli": "0.0.78",
     "codesandbox": "^2.1.14",
     "cos-js-sdk-v5": "^0.5.22",
+    "cropperjs": "^1.5.9",
     "docsearch.js": "^2.6.3",
     "extend": "^3.0.2",
     "file-saver": "^2.0.2",
@@ -93,10 +94,10 @@
     "ngx-color": "^5.1.2",
     "ngx-countdown": "^9.0.1",
     "ngx-highlight-js": "^9.0.0",
+    "ngx-moveable": "^0.14.4",
     "ngx-simplemde": "^9.0.0",
     "ngx-tinymce": "^9.0.0",
     "ngx-ueditor": "^9.0.0",
-    "ngx-moveable": "^0.14.4",
     "perfect-scrollbar": "^1.5.0",
     "qrious": "^4.0.2",
     "rxjs": "~6.5.4",
