--- a/packages/cds/package.json
+++ b/packages/cds/package.json
@@ -16,8 +16,9 @@
     "co-libs"
   ],
   "dependencies": {
+    "@co/common": "PEER-0.0.0-PLACEHOLDER",
     "@co/core": "PEER-0.0.0-PLACEHOLDER",
-    "@co/common": "PEER-0.0.0-PLACEHOLDER"
+    "co-cli": "^1.1.0"
   },
   "sideEffects": false
 }
