--- a/packages/cds/package.json
+++ b/packages/cds/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@co/cds",
+  "name": "@co/acl",
   "version": "0.0.0-PLACEHOLDER",
   "author": "cityocean<it@cityocean.com>",
   "license": "MIT",
@@ -12,13 +12,18 @@
   },
   "homepage": "https://www.cityocean.com",
   "keywords": [
-    "cds",
-    "co-libs"
+    "@co/acl",
+    "angular acl",
+    "ng acl",
+    "ngx acl",
+    "antd",
+    "ng-zorro-antd",
+    "acl",
+    "angular",
+    "component"
   ],
   "dependencies": {
-    "@co/common": "PEER-0.0.0-PLACEHOLDER",
-    "@co/core": "PEER-0.0.0-PLACEHOLDER",
-    "co-cli": "^1.1.0"
+    "@co/core": "PEER-0.0.0-PLACEHOLDER"
   },
   "sideEffects": false
 }
