--- a/packages/cds/package.json
+++ b/packages/cds/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@co/acl",
+  "name": "@co/cds",
   "version": "0.0.0-PLACEHOLDER",
   "author": "cityocean<it@cityocean.com>",
   "license": "MIT",
@@ -12,18 +12,12 @@
   },
   "homepage": "https://www.cityocean.com",
   "keywords": [
-    "@co/acl",
-    "angular acl",
-    "ng acl",
-    "ngx acl",
-    "antd",
-    "ng-zorro-antd",
-    "acl",
-    "angular",
-    "component"
+    "cds",
+    "co-libs"
   ],
   "dependencies": {
-    "@co/core": "PEER-0.0.0-PLACEHOLDER"
+    "@co/core": "PEER-0.0.0-PLACEHOLDER",
+    "@co/common": "PEER-0.0.0-PLACEHOLDER"
   },
   "sideEffects": false
 }
