添加多标签上下文菜单。

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "co-libs",
-  "version": "1.0.94",
+  "version": "1.1.0",
   "description": "co-libs 是一组用于前端开发的公共模块集合",
   "keywords": [
     "co-libs",
@@ -22,19 +22,20 @@
     "lint": "bash scripts/ci/lint.sh -ts -less",
     "tslint": "tslint-config-prettier-check ./tslint.json",
     "build:libs": "bash scripts/ci/build-libs.sh",
-    "build:libs:debug": "bash scripts/ci/build-libs.sh -n ALL -t D:\\src\\co\\co-portal-ms\\ -debug",
+    "build:libs:debug": "bash scripts/ci/build-libs.sh -n ALL -t D:\\workspace\\Frontend\\co-portal\\ -debug",
     "build:libs:core": "bash scripts/ci/build-libs.sh -n core",
-    "build:libs:core:debug": "bash scripts/ci/build-libs.sh  -n core -t D:\\src\\co\\co-portal-ms\\ -debug",
+    "build:libs:core:debug": "bash scripts/ci/build-libs.sh  -n core -t D:\\workspace\\Frontend\\co-portal\\ -debug",
     "build:libs:chart": "bash scripts/ci/build-libs.sh -n chart",
     "build:libs:cbc": "bash scripts/ci/build-libs.sh -n cbc",
     "build:libs:map": "bash scripts/ci/build-libs.sh -n map",
-    "build:libs:cbc:debug": "bash scripts/ci/build-libs.sh  -n cbc -t D:\\src\\co\\co-portal-ms\\ -debug",
+    "build:libs:cbc:debug": "bash scripts/ci/build-libs.sh  -n cbc -t D:\\workspace\\Frontend\\co-portal\\ -debug",
+    "build:libs:common:debug": "bash scripts/ci/build-libs.sh  -n common -t D:\\workspace\\Frontend\\co-portal\\ -debug",
     "build:libs:cms": "bash scripts/ci/build-libs.sh -n cms",
-    "build:libs:cms:debug": "bash scripts/ci/build-libs.sh  -n cms -t D:\\src\\co\\co-portal-ms\\ -debug",
+    "build:libs:cms:debug": "bash scripts/ci/build-libs.sh  -n cms -t D:\\workspace\\Frontend\\co-portal\\ -debug",
     "build:libs:cds": "bash scripts/ci/build-libs.sh -n cds",
     "build:libs:im": "bash scripts/ci/build-libs.sh -n im",
     "build:libs:theme": "bash scripts/ci/build-libs.sh -n theme",
-    "build:libs:theme:debug": "bash scripts/ci/build-libs.sh  -n theme -t D:\\src\\co\\co-portal-ms\\ -debug",
+    "build:libs:theme:debug": "bash scripts/ci/build-libs.sh  -n theme -t D:\\workspace\\Frontend\\co-portal\\ -debug",
     "build:schematics": "bash scripts/ci/build-schematics.sh -b",
     "build:site": "npm run site:gen && node scripts/ci/build-no-lvy && node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng build --prod",
     "build:artifacts": "bash scripts/ci/build-artifacts.sh",
@@ -81,7 +82,6 @@
     "@webcomponents/custom-elements": "^1.4.1",
     "ajv": "^6.12.2",
     "aos": "^3.0.0-beta.6",
-    "co-cli": "^1.1.0",
     "codesandbox": "^2.1.14",
     "cos-js-sdk-v5": "^0.5.22",
     "cropperjs": "^1.5.9",
