--- a/packages/cbc/mobile/port-picker-mobile/package.json
+++ b/packages/cbc/mobile/port-picker-mobile/package.json
@@ -1,7 +1,7 @@
 {
   "ngPackage": {
     "lib": {
-      "flatModuleFile": "coOperationPortPickerMobile",
+      "flatModuleFile": "coPortPickerMobile",
       "entryFile": "public_api.ts",
       "umdModuleIds": {
         "@co/core": "co.core"
